--- a/tecnimotors/package.json
+++ b/tecnimotors/package.json
@@ -18,9 +18,11 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "angular-svg-icon": "^18.0.2",
     "glob": "^11.0.0",
     "inflight": "^1.0.6",
     "lru-cache": "^11.0.1",
+    "ng-lazyload-image": "^9.1.3",
     "rimraf": "^6.0.1",
     "rxjs": "~7.8.0",
     "swiper": "^11.1.4",
