--- a/tecnimotors/angular.json
+++ b/tecnimotors/angular.json
@@ -18,9 +18,7 @@
             "browser": "src/main.ts",
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
-            "aot": false,
-            "deployUrl": "",
-            "assets": ["src/assets"],
+            "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "src/styles.css",
               "src/assets/css/plugins/swiper-bundle.min.css",
