--- a/tecnimotors/package.json
+++ b/tecnimotors/package.json
@@ -22,8 +22,11 @@
     "angular-svg-icon": "^18.0.2",
     "glob": "^11.0.0",
     "inflight": "^1.0.6",
+    "lightgallery": "^2.8.2",
+    "lightgallery.js": "^1.4.0",
     "lru-cache": "^11.0.1",
     "ng-lazyload-image": "^9.1.3",
+    "ngx-pagination": "^6.0.3",
     "rimraf": "^6.0.1",
     "rxjs": "~7.8.0",
     "swiper": "^11.1.15",
