--- a/tecnimotors/package.json
+++ b/tecnimotors/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@ng-select/ng-select": "^13.9.1",
+    "@popperjs/core": "^2.11.8",
     "angular-svg-icon": "^18.0.2",
+    "bootstrap": "^5.3.2",
     "glob": "^11.0.0",
     "inflight": "^1.0.6",
     "lightgallery": "^2.8.2",
@@ -44,6 +46,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.5.2"
+    "typescript": "^5.5.4",
+    "vite": "^6.1.0"
   }
 }
