--- a/pagina-tecnimotors/angular.json
+++ b/pagina-tecnimotors/angular.json
@@ -24,6 +24,7 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
+            "allowedCommonJsDependencies": ["sweetalert2"],
             "styles": [
               "src/styles.scss",
               "src/assets/css/plugins/swiper-bundle.min.css",
